# computer-check

./: CHANGELOG.md  LICENSE  computer-check.cabal
src/: Constraints.hs  Decode.hs  DistanceExtension.hs  ListExtension.hs  RegionExtension.hs  Run.hs  Term.hs  TermType.hs  Util.hs
test/: Main.hs
