cabal-version:      3.0
name:               computer-check
version:            0.1.0.0
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Term TermType Decode Run Constraints
    other-modules:    Util
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      parsec,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite computer-check-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        computer-check
